[gd_scene load_steps=7 format=3 uid="uid://be8sl7bhrmbur"]

[ext_resource type="Script" uid="uid://blg3wgr00id77" path="res://rail/scenes/EncounterPoint/EncounterPoint.gd" id="1_unhl3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ivdxx"]
albedo_color = Color(0, 0, 0.427451, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_df8a1"]
material = SubResource("StandardMaterial3D_ivdxx")
height = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8cwex"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_isi1d"]
material = SubResource("StandardMaterial3D_8cwex")
top_radius = 0.05
bottom_radius = 0.05
height = 0.06

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2pyyh"]
height = 0.1
radius = 0.05

[node name="EncounterPoint" type="Node3D"]
script = ExtResource("1_unhl3")

[node name="EncounterMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_df8a1")

[node name="Conditions" type="Node" parent="."]

[node name="CollisionArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CenterMesh" type="MeshInstance3D" parent="CollisionArea"]
mesh = SubResource("CylinderMesh_isi1d")

[node name="CollisionAreaShape" type="CollisionShape3D" parent="CollisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0034208298)
shape = SubResource("CylinderShape3D_2pyyh")

[connection signal="body_entered" from="CollisionArea" to="." method="_onCollisionAreaBodyEntered"]
